[project]
name = "jpsvis2visualizer"
version = "0.1.0"
authors = [{ name = "T. Schrödter" }]
description = "Converts old jpsvis files to be visualized with the new visualizer"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pedpy~=1.2",
    "pre-commit~=4.0",
    "typer~=0.12.5",
    "tqdm~=4.66"
]

requires-python = ">=3.10"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


# Define a CLI entry point
[project.scripts]
jpsvis2visualizer = "jpsvis2visualizer.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

line-length = 100
src = ["src"]
extend-include = ["*.ipynb"]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pep-8-naming
    "N",
    # pycodestyle
    "E", "W", "D",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-gettext
    "INT",
    # pylint
    "PL",
    # flake8-pytest-style
    "PT",
    # misc lints
    "PIE",
    # flake8-pyi
    "PYI",
    # tidy imports
    "TID",
    # type-checking imports
    "TCH",
    # comprehensions
    "C4",
    # pygrep-hooks
    "PGH",
    # Ruff-specific rules
    "RUF",
    # flake8-bandit: exec-builtin
    "S102",
    # numpy
    "NPY",
    # Perflint
    "PERF",
    # flynt
    "FLY",
    # flake8-logging-format
    "G",
    # flake8-future-annotations
    "FA",
    # unconventional-import-alias
    "ICN001",
    # flake8-slots
    "SLOT",
    # flake8-raise
    "RSE",
    # pandas-vet
    "PD",
    "RUF"
]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
## Maximum number of arguments for function / method
max-args = 10
## Maximum number of branch for function / method body.
max-branches = 15
## Maximum number of locals for function / method body.
max-locals = 20
## Maximum number of statements in function / method body.
max-statements = 50
## Constant types to ignore when used as "magic values" (see: PLR2004).
allow-magic-value-types = ["int", "str"]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
ignore_missing_imports = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = false
exclude = "^(helper|docs|scripts|tests)(/|$)"

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "mpl_toolkits.*",
    "pandas.*",
    "shapely.*",
    "numpy.*",
    "scipy.*",
    "setuptools.*",
    "h5py.*",
]
ignore_missing_imports = true